# Treinos-Python

./: .gitignore  README.md  pyproject.toml
APIs/: app.py  main.py
Library system/: pratique_mod_8.py
Recursos Adicionais/: pratique mod 6.py
