[project]
name = "cursoebac"
version = "0.1.0"
description = ""
authors = [
    {name = "balu",email = "daniel.pf.chs@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
